--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Colmar Academy</title>
 </head>
 <body>
-    
+    <header>
+        <img src="images/ic-logo.svg" alt="Colmar Academy Logo"><p><strong>COLMAR</strong>ACADEMY</p>
+        <nav>
+            <a href="#">On Campus</a>
+            <a href="#">Online</a>
+            <a href="#">Or Companies</a>
+            <a href="#">Sign In</a>
+        </nav>
+    </header>
+    <section id="section1">
+        <div id="s1_left">
+            <img src="images/banner.jpg" alt="">
+        </div>
+        <div id="s1_right">
+            <h1>Learn something new everyday</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        </div>
+    </section>
 </body>
 </html>
